[tool.poetry]
name = "locust"
version = "0.1.0"
description = ""
authors = ["Iramis Valentin <iramis.valentin@capco.com>"]

[tool.poetry.dependencies]
python = "^3.7"
gevent = "^1.4"
flask = "^1.0"
requests = "^2.21"
msgpack = "^0.6.1"
six = "^1.12"
pyzmq = "^18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
